Added register method to documentation
